--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,2 @@
 [filter "tag"]
-	smudge = sed -i.bak "s/\\\$TAG\\\$/\\\$TAG:$(git describe --abbrev=0 --tags)\\\$/" vers
-        clean = sed -i.bak "s/\\\$TAG[^\\\$]*\\\$/\\\$TAG\\\$/" vers
+	smudge = sed "s/\\\$TAG\\\$/\\\$TAG:$(git describe --abbrev=0 --tags)\\\$/"
